Correction totale prise en charge des accents sur les annonces
