# backend/swagger_output.json
@@ -444,6 +444,24 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "titre": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "prix": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
